@@ -1,10 +1,10 @@
 import LibraryManifestGenerator.BundledLibrary
-import org.enso.build.BenchTasks._
+import org.enso.build.BenchTasks.*
 import org.enso.build.WithDebugCommand
 import org.apache.commons.io.FileUtils
 import sbt.Keys.{libraryDependencies, scalacOptions}
 import sbt.addCompilerPlugin
-import sbt.complete.DefaultParsers._
+import sbt.complete.DefaultParsers.*
 import sbt.complete.Parser
 import sbt.nio.file.FileTreeView
 import sbt.internal.util.ManagedLogger
@@ -12,18 +12,29 @@ import src.main.scala.licenses.{
   DistributionDescription,
   SBTDistributionComponent
 }
+import sbt.librarymanagement.DependencyFilter
+
+// This import is unnecessary, but bit adds a proper code completion features
+// to IntelliJ.
+import JPMSPlugin.autoImport.*
 
 import java.io.File
+import scala.collection.mutable.ListBuffer
 
 // ============================================================================
 // === Global Configuration ===================================================
 // ============================================================================
 
 val scalacVersion = "2.13.11"
-val graalVersion  = "17.0.7"
+// source version of the Java language
+val javaVersion = "21"
+// version of the GraalVM JDK
+val graalVersion = "21.0.1"
 // Version used for the Graal/Truffle related Maven packages
-val graalMavenPackagesVersion = "23.0.0"
-val targetJavaVersion         = graalVersion.split("\\.")(0)
+// Keep in sync with GraalVM.version. Do not change the name of this variable,
+// it is used by the Rust build script via regex matching.
+val graalMavenPackagesVersion = "23.1.0"
+val targetJavaVersion         = "17"
 val defaultDevEnsoVersion     = "0.0.0-dev"
 val ensoVersion = sys.env.getOrElse(
   "ENSO_VERSION",
@@ -37,6 +48,10 @@ val currentEdition = sys.env.getOrElse(
 // Note [Stdlib Version]
 val stdLibVersion       = defaultDevEnsoVersion
 val targetStdlibVersion = ensoVersion
+
+Global / onLoad := GraalVM.addVersionCheck(
+  graalMavenPackagesVersion
+)((Global / onLoad).value)
 
 /* Note [Engine And Launcher Version]
  * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -168,11 +183,12 @@ Global / excludeLintKeys += logManager
 // ============================================================================
 
 ThisBuild / javacOptions ++= Seq(
-  "-encoding",       // Provide explicit encoding (the next line)
-  "UTF-8",           // Specify character encoding used by Java source files
-  "-deprecation",    // Shows a description of each use or override of a deprecated member or class
-  "-g",              // Include debugging information
-  "-Xlint:unchecked" // Enable additional warnings
+  "-encoding",        // Provide explicit encoding (the next line)
+  "UTF-8",            // Specify character encoding used by Java source files
+  "-deprecation",     // Shows a description of each use or override of a deprecated member or class
+  "-g",               // Include debugging information
+  "-Xlint:unchecked", // Enable additional warnings
+  "-proc:full"        // Annotation processing is enabled
 )
 
 ThisBuild / scalacOptions ++= Seq(
@@ -237,11 +253,6 @@ lazy val rebuildNativeImage = taskKey[Unit]("Force to rebuild native image")
 lazy val buildNativeImage =
   taskKey[Unit]("Ensure that the Native Image is built.")
 
-// Bootstrap task
-lazy val bootstrap =
-  taskKey[Unit]("Prepares Truffle JARs that are required by the sbt JVM")
-bootstrap := {}
-
 // ============================================================================
 // === Global Project =========================================================
 // ============================================================================
@@ -249,6 +260,8 @@ bootstrap := {}
 lazy val enso = (project in file("."))
   .settings(version := "0.1")
   .aggregate(
+    `persistance-dsl`,
+    `persistance`,
     `interpreter-dsl`,
     `interpreter-dsl-test`,
     `json-rpc-server-test`,
@@ -281,13 +294,12 @@ lazy val enso = (project in file("."))
     launcher,
     downloader,
     `runtime-parser`,
+    `runtime-compiler`,
     `runtime-language-epb`,
     `runtime-instrument-common`,
     `runtime-instrument-id-execution`,
     `runtime-instrument-repl-debugger`,
     `runtime-instrument-runtime-server`,
-    `runtime-with-instruments`,
-    `runtime-with-polyglot`,
     `runtime-version-manager`,
     `runtime-version-manager-test`,
     editions,
@@ -308,7 +320,9 @@ lazy val enso = (project in file("."))
     `std-aws`,
     `simple-httpbin`,
     `enso-test-java-helpers`,
-    `exploratory-benchmark-java-helpers`
+    `exploratory-benchmark-java-helpers`,
+    `benchmark-java-helpers`,
+    `bench-processor`
   )
   .settings(Global / concurrentRestrictions += Tags.exclusive(Exclusive))
   .settings(
@@ -346,7 +360,7 @@ val akkaURL                   = "com.typesafe.akka"
 val akkaVersion               = "2.6.20"
 val akkaHTTPVersion           = "10.2.10"
 val akkaMockSchedulerVersion  = "0.5.5"
-val logbackClassicVersion     = "1.3.7"
+val logbackClassicVersion     = JPMSUtils.logbackClassicVersion
 val logbackPkg = Seq(
   "ch.qos.logback" % "logback-classic" % logbackClassicVersion,
   "ch.qos.logback" % "logback-core"    % logbackClassicVersion
@@ -457,11 +471,11 @@ val zio = Seq(
 val bcpkixJdk15Version      = "1.70"
 val bumpVersion             = "0.1.3"
 val declineVersion          = "2.4.1"
-val directoryWatcherVersion = "0.9.10"
+val directoryWatcherVersion = "0.18.0"
 val flatbuffersVersion      = "1.12.0"
 val guavaVersion            = "32.0.0-jre"
 val jlineVersion            = "3.23.0"
-val jgitVersion             = "6.3.0.202209071007-r"
+val jgitVersion             = "6.7.0.202309050840-r"
 val diffsonVersion          = "4.4.0"
 val kindProjectorVersion    = "0.13.2"
 val mockitoScalaVersion     = "1.17.14"
@@ -474,7 +488,7 @@ val scalaLoggingVersion     = "3.9.4"
 val scalameterVersion       = "0.19"
 val scalatestVersion        = "3.3.0-SNAP4"
 val shapelessVersion        = "2.3.10"
-val slf4jVersion            = "1.7.36"
+val slf4jVersion            = JPMSUtils.slf4jVersion
 val slickVersion            = "3.4.1"
 val sqliteVersion           = "3.42.0.0"
 val tikaVersion             = "2.4.1"
@@ -485,6 +499,30 @@ val hamcrestVersion         = "1.3"
 val netbeansApiVersion      = "RELEASE180"
 val fansiVersion            = "0.4.0"
 val httpComponentsVersion   = "4.4.1"
+
+// ============================================================================
+// === Utility methods =====================================================
+// ============================================================================
+
+lazy val componentModulesPaths =
+  taskKey[Def.Classpath](
+    "Gathers all component modules (Jar archives that should be put on module-path" +
+    " as files"
+  )
+(ThisBuild / componentModulesPaths) := {
+  val runnerCp  = (`engine-runner` / Runtime / fullClasspath).value
+  val runtimeCp = (LocalProject("runtime") / Runtime / fullClasspath).value
+  val fullCp    = (runnerCp ++ runtimeCp).distinct
+  val log       = streams.value.log
+  JPMSUtils.filterModulesFromClasspath(
+    fullCp,
+    JPMSUtils.componentModules,
+    log,
+    shouldContainAll = true
+  )
+}
+
+lazy val compileModuleInfo = taskKey[Unit]("Compiles `module-info.java`")
 
 // ============================================================================
 // === Internal Libraries =====================================================
@@ -634,10 +672,11 @@ lazy val pkg = (project in file("lib/scala/pkg"))
     frgaalJavaCompilerSetting,
     version := "0.1",
     libraryDependencies ++= circe ++ Seq(
-      "org.scalatest"     %% "scalatest"        % scalatestVersion % Test,
-      "io.circe"          %% "circe-yaml"       % circeYamlVersion,
-      "org.apache.commons" % "commons-compress" % commonsCompressVersion,
-      "commons-io"         % "commons-io"       % commonsIoVersion
+      "org.graalvm.truffle" % "truffle-api"      % graalMavenPackagesVersion,
+      "org.scalatest"      %% "scalatest"        % scalatestVersion % Test,
+      "io.circe"           %% "circe-yaml"       % circeYamlVersion,
+      "org.apache.commons"  % "commons-compress" % commonsCompressVersion,
+      "commons-io"          % "commons-io"       % commonsIoVersion
     )
   )
   .dependsOn(editions)
@@ -674,7 +713,9 @@ lazy val `profiling-utils` = project
       exclude ("org.netbeans.api", "org-openide-util-ui")
       exclude ("org.netbeans.api", "org-openide-awt")
       exclude ("org.netbeans.api", "org-openide-modules")
-      exclude ("org.netbeans.api", "org-netbeans-api-annotations-common")
+      exclude ("org.netbeans.api", "org-netbeans-api-annotations-common"),
+      "junit"          % "junit"           % junitVersion   % Test,
+      "com.github.sbt" % "junit-interface" % junitIfVersion % Test
     )
   )
 
@@ -756,9 +797,12 @@ lazy val filewatcher = project
       "io.methvin"     % "directory-watcher" % directoryWatcherVersion,
       "commons-io"     % "commons-io"        % commonsIoVersion,
       "org.scalatest" %% "scalatest"         % scalatestVersion % Test
-    ) ++ logbackTest
+    ),
+    Test / fork := true,
+    Test / javaOptions ++= testLogProviderOptions
   )
   .dependsOn(testkit % Test)
+  .dependsOn(`logging-service-logback` % "test->test")
 
 lazy val `logging-truffle-connector` = project
   .in(file("lib/scala/logging-truffle-connector"))
@@ -766,8 +810,9 @@ lazy val `logging-truffle-connector` = project
     frgaalJavaCompilerSetting,
     version := "0.1",
     libraryDependencies ++= Seq(
-      "org.slf4j"           % "slf4j-api"   % slf4jVersion,
-      "org.graalvm.truffle" % "truffle-api" % graalMavenPackagesVersion % "provided"
+      "org.slf4j"           % "slf4j-api"               % slf4jVersion,
+      "org.graalvm.truffle" % "truffle-api"             % graalMavenPackagesVersion % "provided",
+      "org.netbeans.api"    % "org-openide-util-lookup" % netbeansApiVersion        % "provided"
     )
   )
   .dependsOn(`logging-utils`)
@@ -839,6 +884,7 @@ lazy val `refactoring-utils` = project
   .dependsOn(testkit % Test)
 
 lazy val `project-manager` = (project in file("lib/scala/project-manager"))
+  .enablePlugins(JPMSPlugin)
   .settings(
     (Compile / mainClass) := Some("org.enso.projectmanager.boot.ProjectManager")
   )
@@ -867,10 +913,22 @@ lazy val `project-manager` = (project in file("lib/scala/project-manager"))
       "org.typelevel" %% "kind-projector" % kindProjectorVersion cross CrossVersion.full
     )
   )
+  /** Fat jar assembly settings
+    */
   .settings(
     assembly / assemblyJarName := "project-manager.jar",
     assembly / test := {},
     assembly / assemblyOutputPath := file("project-manager.jar"),
+    // Exclude all the Truffle/Graal related artifacts from the fat jar
+    assembly / assemblyExcludedJars := {
+      val pkgsToExclude = GraalVM.modules
+      val ourFullCp     = (Runtime / fullClasspath).value
+      JPMSUtils.filterModulesFromClasspath(
+        ourFullCp,
+        pkgsToExclude,
+        streams.value.log
+      )
+    },
     assembly / assemblyMergeStrategy := {
       case PathList("META-INF", file, xs @ _*) if file.endsWith(".DSA") =>
         MergeStrategy.discard
@@ -878,12 +936,48 @@ lazy val `project-manager` = (project in file("lib/scala/project-manager"))
         MergeStrategy.discard
       case PathList("META-INF", "MANIFEST.MF", xs @ _*) =>
         MergeStrategy.discard
+      // This fat Jar must not be an explicit module, so discard all the module-info classes
+      case PathList(xs @ _*) if xs.last.contains("module-info") =>
+        MergeStrategy.discard
       case "application.conf" => MergeStrategy.concat
       case "reference.conf"   => MergeStrategy.concat
       case _                  => MergeStrategy.first
+    }
+  )
+  /** JPMS related settings for tests
+    */
+  .settings(
+    Test / fork := true,
+    // These dependencies are here so that we can use them in `--module-path` later on.
+    libraryDependencies ++= {
+      val necessaryModules =
+        GraalVM.modules.map(_.withConfigurations(Some(Test.name))) ++
+        GraalVM.langsPkgs.map(_.withConfigurations(Some(Test.name)))
+      necessaryModules
     },
-    (Test / test) := (Test / test).dependsOn(`engine-runner` / assembly).value,
-    Test / javaOptions += s"-Dconfig.file=${sourceDirectory.value}/test/resources/application.conf",
+    Test / addModules := Seq(
+      (`runtime-fat-jar` / javaModuleName).value
+    ),
+    Test / modulePath := {
+      val updateReport = (Test / update).value
+      val requiredModIds =
+        GraalVM.modules ++ GraalVM.langsPkgs ++ logbackPkg ++ Seq(
+          "org.slf4j" % "slf4j-api" % slf4jVersion
+        )
+      val requiredMods = JPMSUtils.filterModulesFromUpdate(
+        updateReport,
+        requiredModIds,
+        streams.value.log,
+        shouldContainAll = true
+      )
+      val runtimeMod =
+        (`runtime-fat-jar` / Compile / productDirectories).value.head
+
+      requiredMods ++ Seq(runtimeMod)
+    },
+    Test / javaOptions ++= testLogProviderOptions
+  )
+  .settings(
     rebuildNativeImage := NativeImage
       .buildNativeImage(
         "project-manager",
@@ -922,6 +1016,7 @@ lazy val `project-manager` = (project in file("lib/scala/project-manager"))
   .dependsOn(`json-rpc-server-test` % Test)
   .dependsOn(testkit % Test)
   .dependsOn(`runtime-version-manager-test` % Test)
+  .dependsOn(`logging-service-logback` % Test)
 
 /* Note [Classpath Separation]
  * ~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -967,6 +1062,7 @@ lazy val `json-rpc-server` = project
 lazy val `json-rpc-server-test` = project
   .in(file("lib/scala/json-rpc-server-test"))
   .settings(
+    frgaalJavaCompilerSetting,
     libraryDependencies ++= akka,
     libraryDependencies ++= circe,
     libraryDependencies ++= Seq(
@@ -1008,6 +1104,35 @@ lazy val searcher = project
   .dependsOn(testkit % Test)
   .dependsOn(`polyglot-api`)
 
+lazy val `persistance` = (project in file("lib/java/persistance"))
+  .settings(
+    version := "0.1",
+    frgaalJavaCompilerSetting,
+    Compile / javacOptions := ((Compile / javacOptions).value),
+    libraryDependencies ++= Seq(
+      "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion,
+      "junit"            % "junit"                   % junitVersion   % Test,
+      "com.github.sbt"   % "junit-interface"         % junitIfVersion % Test
+    )
+  )
+  .dependsOn(`persistance-dsl` % Test)
+
+lazy val `persistance-dsl` = (project in file("lib/java/persistance-dsl"))
+  .settings(
+    version := "0.1",
+    frgaalJavaCompilerSetting,
+    Compile / javacOptions := ((Compile / javacOptions).value ++
+    // Only run ServiceProvider processor and ignore those defined in META-INF, thus
+    // fixing incremental compilation setup
+    Seq(
+      "-processor",
+      "org.netbeans.modules.openide.util.ServiceProviderProcessor"
+    )),
+    libraryDependencies ++= Seq(
+      "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion % "provided"
+    )
+  )
+
 lazy val `interpreter-dsl` = (project in file("lib/scala/interpreter-dsl"))
   .settings(
     version := "0.1",
@@ -1021,7 +1146,7 @@ lazy val `interpreter-dsl` = (project in file("lib/scala/interpreter-dsl"))
     )),
     libraryDependencies ++= Seq(
       "org.apache.commons" % "commons-lang3"           % commonsLangVersion,
-      "org.netbeans.api"   % "org-openide-util-lookup" % netbeansApiVersion,
+      "org.netbeans.api"   % "org-openide-util-lookup" % netbeansApiVersion % "provided",
       "com.google.guava"   % "guava"                   % guavaVersion exclude ("com.google.code.findbugs", "jsr305")
     )
   )
@@ -1034,8 +1159,7 @@ lazy val `interpreter-dsl-test` =
       frgaalJavaCompilerSetting,
       Test / fork := true,
       Test / javaOptions ++= Seq(
-        "-Dgraalvm.locatorDisabled=true",
-        s"--upgrade-module-path=${file("engine/runtime/build-cache/truffle-api.jar").absolutePath}"
+        "-Dpolyglotimpl.DisableClassPathIsolation=true"
       ),
       Test / javacOptions ++= Seq(
         "-s",
@@ -1061,29 +1185,30 @@ lazy val `interpreter-dsl-test` =
 // === Sub-Projects ===========================================================
 // ============================================================================
 
-val truffleRunOptionsNoAssert =
-  if (java.lang.Boolean.getBoolean("bench.compileOnly")) {
-    Seq(
-      "-Dpolyglot.engine.IterativePartialEscape=true",
-      "-Dpolyglot.engine.BackgroundCompilation=false",
-      "-Dbench.compileOnly=true"
-    )
-  } else {
-    Seq(
-      "-Dpolyglot.engine.IterativePartialEscape=true",
-      "-Dpolyglot.engine.BackgroundCompilation=false"
-    )
-  }
-val truffleRunOptions = "-ea" +: truffleRunOptionsNoAssert
+val benchOnlyOptions = if (java.lang.Boolean.getBoolean("bench.compileOnly")) {
+  Seq(
+    "-Dbench.compileOnly=true"
+  )
+} else {
+  Seq(
+    "-Dbench.compileOnly=false"
+  )
+}
 
-val truffleRunOptionsNoAssertSettings = Seq(
-  fork := true,
-  javaOptions ++= truffleRunOptionsNoAssert
+/** Truffle-related settings for test running.
+  */
+val truffleRunOpts = Seq(
+  "-Dpolyglot.compiler.IterativePartialEscape=true",
+  "-Dpolyglot.compiler.BackgroundCompilation=false"
 )
 
 val truffleRunOptionsSettings = Seq(
   fork := true,
-  javaOptions ++= truffleRunOptions
+  javaOptions ++= "-ea" +: benchOnlyOptions
+)
+
+val testLogProviderOptions = Seq(
+  "-Dslf4j.provider=org.enso.logger.TestLogProvider"
 )
 
 lazy val `polyglot-api` = project
@@ -1093,14 +1218,15 @@ lazy val `polyglot-api` = project
     Test / fork := true,
     commands += WithDebugCommand.withDebug,
     Test / envVars ++= distributionEnvironmentOverrides,
-    Test / javaOptions ++= {
-      // Note [Classpath Separation]
-      val runtimeClasspath =
-        (LocalProject("runtime") / Compile / fullClasspath).value
-          .map(_.data)
-          .mkString(File.pathSeparator)
-      Seq(s"-Dtruffle.class.path.append=$runtimeClasspath")
-    },
+    Test / javaOptions ++= Seq(
+      "-Dpolyglot.engine.WarnInterpreterOnly=false",
+      "-Dpolyglotimpl.DisableClassPathIsolation=true"
+    ),
+    // Append enso language on the class-path
+    Test / unmanagedClasspath :=
+      (LocalProject(
+        "runtime-fat-jar"
+      ) / Compile / fullClasspath).value,
     libraryDependencies ++= Seq(
       "org.graalvm.sdk"        % "polyglot-tck"     % graalMavenPackagesVersion % "provided",
       "org.graalvm.truffle"    % "truffle-api"      % graalMavenPackagesVersion % "provided",
@@ -1118,6 +1244,7 @@ lazy val `polyglot-api` = project
   .dependsOn(testkit % Test)
 
 lazy val `language-server` = (project in file("engine/language-server"))
+  .enablePlugins(JPMSPlugin)
   .settings(
     commands += WithDebugCommand.withDebug,
     frgaalJavaCompilerSetting,
@@ -1135,7 +1262,11 @@ lazy val `language-server` = (project in file("engine/language-server"))
       "org.scalatest"              %% "scalatest"            % scalatestVersion          % Test,
       "org.scalacheck"             %% "scalacheck"           % scalacheckVersion         % Test,
       "org.graalvm.sdk"             % "polyglot-tck"         % graalMavenPackagesVersion % "provided",
-      "org.eclipse.jgit"            % "org.eclipse.jgit"     % jgitVersion
+      "org.eclipse.jgit"            % "org.eclipse.jgit"     % jgitVersion,
+      "org.bouncycastle"            % "bcutil-jdk18on"       % "1.76"                    % Test,
+      "org.bouncycastle"            % "bcpkix-jdk18on"       % "1.76"                    % Test,
+      "org.bouncycastle"            % "bcprov-jdk18on"       % "1.76"                    % Test,
+      "org.apache.tika"             % "tika-core"            % tikaVersion               % Test
     ),
     Test / testOptions += Tests
       .Argument(TestFrameworks.ScalaCheck, "-minSuccessfulTests", "1000"),
@@ -1154,20 +1285,93 @@ lazy val `language-server` = (project in file("engine/language-server"))
     )
   )
   .settings(
-    // These settings are needed by language-server tests that create a runtime context.
     Test / fork := true,
-    Test / javaOptions ++= {
-      // Note [Classpath Separation]
-      val runtimeClasspath =
-        (LocalProject("runtime") / Runtime / fullClasspath).value
-          .map(_.data)
-          .mkString(File.pathSeparator)
-      Seq(
-        s"-Dconfig.file=${sourceDirectory.value}/test/resources/application.conf",
-        s"-Dtruffle.class.path.append=$runtimeClasspath",
-        s"-Duser.dir=${file(".").getCanonicalPath}"
+    // These dependencies are here so that we can use them in `--module-path` later on.
+    libraryDependencies ++= {
+      val necessaryModules =
+        GraalVM.modules.map(_.withConfigurations(Some(Test.name))) ++
+        GraalVM.langsPkgs.map(_.withConfigurations(Some(Test.name)))
+      necessaryModules
+    },
+    Test / addModules := Seq(
+      (`runtime-fat-jar` / javaModuleName).value
+    ),
+    Test / modulePath := {
+      val updateReport = (Test / update).value
+      // org.bouncycastle is a module required by `org.enso.runtime` module.
+      val requiredModIds =
+        GraalVM.modules ++ GraalVM.langsPkgs ++ logbackPkg ++ Seq(
+          "org.slf4j"        % "slf4j-api"      % slf4jVersion,
+          "org.bouncycastle" % "bcutil-jdk18on" % "1.76",
+          "org.bouncycastle" % "bcpkix-jdk18on" % "1.76",
+          "org.bouncycastle" % "bcprov-jdk18on" % "1.76"
+        )
+      val requiredMods = JPMSUtils.filterModulesFromUpdate(
+        updateReport,
+        requiredModIds,
+        streams.value.log,
+        shouldContainAll = true
+      )
+      val runtimeMod =
+        (`runtime-fat-jar` / Compile / productDirectories).value.head
+      requiredMods ++ Seq(runtimeMod)
+    },
+    Test / javaOptions ++= testLogProviderOptions,
+    Test / patchModules := {
+
+      /** All these modules will be in --patch-module cmdline option to java, which means that
+        * for the JVM, it will appear that all the classes contained in these sbt projects are contained
+        * in the `org.enso.runtime` module. In this way, we do not have to assembly the `runtime.jar`
+        * fat jar.
+        */
+      val modulesToPatchIntoRuntime: Seq[File] =
+        (LocalProject(
+          "runtime-instrument-common"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-instrument-id-execution"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-instrument-repl-debugger"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-instrument-runtime-server"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-language-epb"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-compiler"
+        ) / Compile / productDirectories).value ++
+        (LocalProject("runtime-parser") / Compile / productDirectories).value ++
+        (LocalProject(
+          "interpreter-dsl"
+        ) / Compile / productDirectories).value ++
+        // We have to patch the `runtime` project as well, as it contains BuiltinTypes.metadata in
+        // runtime/target/classes/META-INF directory
+        (LocalProject("runtime") / Compile / productDirectories).value ++
+        (LocalProject(
+          "syntax-rust-definition"
+        ) / Compile / productDirectories).value
+      val extraModsToPatch = JPMSUtils.filterModulesFromUpdate(
+        (Test / update).value,
+        Seq(
+          "org.apache.tika" % "tika-core" % tikaVersion
+        ),
+        streams.value.log,
+        shouldContainAll = true
+      )
+      Map(
+        (`runtime-fat-jar` / javaModuleName).value -> (modulesToPatchIntoRuntime ++ extraModsToPatch)
       )
     },
+    Test / addReads := {
+      Map(
+        (`runtime-fat-jar` / javaModuleName).value -> Seq("ALL-UNNAMED")
+      )
+    }
+  )
+  .settings(
     Test / compile := (Test / compile)
       .dependsOn(LocalProject("enso") / updateLibraryManifests)
       .value,
@@ -1191,7 +1395,7 @@ lazy val `language-server` = (project in file("engine/language-server"))
   .dependsOn(`profiling-utils`)
   .dependsOn(filewatcher)
   .dependsOn(testkit % Test)
-  .dependsOn(`logging-service-logback` % Test)
+  .dependsOn(`logging-service-logback` % "test->test")
   .dependsOn(`library-manager-test` % Test)
   .dependsOn(`runtime-version-manager-test` % Test)
 
@@ -1226,13 +1430,16 @@ lazy val truffleDslSuppressWarnsSetting = Seq(
 )
 
 /** A setting to replace javac with Frgaal compiler, allowing to use latest Java features in the code
-  * and still compile down to JDK 11
+  * and still compile down to JDK 17
   */
-lazy val frgaalJavaCompilerSetting = Seq(
+lazy val frgaalJavaCompilerSetting =
+  customFrgaalJavaCompilerSettings(targetJavaVersion)
+
+def customFrgaalJavaCompilerSettings(targetJdk: String) = Seq(
   Compile / compile / compilers := FrgaalJavaCompiler.compilers(
     (Compile / dependencyClasspath).value,
     compilers.value,
-    targetJavaVersion
+    targetJdk
   ),
   // This dependency is needed only so that developers don't download Frgaal manually.
   // Sadly it cannot be placed under plugins either because meta dependencies are not easily
@@ -1271,37 +1478,52 @@ lazy val instrumentationSettings = frgaalJavaCompilerSetting ++ Seq(
 lazy val `runtime-language-epb` =
   (project in file("engine/runtime-language-epb"))
     .settings(
+      frgaalJavaCompilerSetting,
       inConfig(Compile)(truffleRunOptionsSettings),
       truffleDslSuppressWarnsSetting,
-      instrumentationSettings
+      commands += WithDebugCommand.withDebug,
+      fork := true,
+      Test / javaOptions ++= Seq(),
+      instrumentationSettings,
+      libraryDependencies ++= Seq(
+        "junit"               % "junit"                 % junitVersion              % Test,
+        "com.github.sbt"      % "junit-interface"       % junitIfVersion            % Test,
+        "org.graalvm.truffle" % "truffle-api"           % graalMavenPackagesVersion % "provided",
+        "org.graalvm.truffle" % "truffle-dsl-processor" % graalMavenPackagesVersion % "provided"
+      )
     )
-    .dependsOn(`polyglot-api`)
 
-/** Runs gu (GraalVM updater) command with given `args`.
-  * For example `runGu(Seq("install", "js"))`.
-  * @param logger Logger for the `gu` command.
-  * @param args Arguments for the `gu` command.
+/** `runtime-test-instruments` project contains Truffle instruments that are used solely for testing.
+  * It is compiled into an explicit Java module. Note that this project cannot have compile-time dependency on `runtime`
+  * project, so if you need access to classes from `runtime`, you need to use reflection.
   */
-def runGu(logger: ManagedLogger, args: Seq[String]): String = {
-  val javaHome = new File(
-    System.getProperty("java.home")
-  )
-  val os = {
-    if (Platform.isLinux) DistributionPackage.OS.Linux
-    else if (Platform.isMacOS) DistributionPackage.OS.MacOS
-    else if (Platform.isWindows) DistributionPackage.OS.Windows
-    else throw new RuntimeException("Unknown platform")
-  }
-  packageBuilder.gu(
-    logger,
-    os,
-    javaHome,
-    args: _*
-  )
-}
+lazy val `runtime-test-instruments` =
+  (project in file("engine/runtime-test-instruments"))
+    .enablePlugins(JPMSPlugin)
+    .settings(
+      inConfig(Compile)(truffleRunOptionsSettings),
+      truffleDslSuppressWarnsSetting,
+      instrumentationSettings,
+      javaModuleName := "org.enso.runtime.test",
+      modulePath := {
+        JPMSUtils.filterModulesFromUpdate(
+          update.value,
+          GraalVM.modules ++ Seq(
+            "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion
+          ),
+          streams.value.log,
+          shouldContainAll = true
+        )
+      },
+      libraryDependencies ++= GraalVM.modules,
+      libraryDependencies ++= Seq(
+        "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion % "provided"
+      )
+    )
 
 lazy val runtime = (project in file("engine/runtime"))
   .configs(Benchmark)
+  .enablePlugins(JPMSPlugin)
   .settings(
     frgaalJavaCompilerSetting,
     truffleDslSuppressWarnsSetting,
@@ -1313,12 +1535,6 @@ lazy val runtime = (project in file("engine/runtime"))
     version := ensoVersion,
     commands += WithDebugCommand.withDebug,
     inConfig(Compile)(truffleRunOptionsSettings),
-    inConfig(Benchmark)(Defaults.testSettings),
-    Benchmark / javacOptions --= Seq(
-      "-source",
-      frgaalSourceLevel,
-      "--enable-preview"
-    ),
     Test / parallelExecution := false,
     Test / logBuffered := false,
     Test / testOptions += Tests.Argument(
@@ -1326,41 +1542,122 @@ lazy val runtime = (project in file("engine/runtime"))
     ), // show timings for individual tests
     scalacOptions += "-Ymacro-annotations",
     scalacOptions ++= Seq("-Ypatmat-exhaust-depth", "off"),
-    libraryDependencies ++= jmh ++ jaxb ++ circe ++ Seq(
-      "org.apache.commons"  % "commons-lang3"         % commonsLangVersion,
-      "org.apache.tika"     % "tika-core"             % tikaVersion,
-      "org.graalvm.sdk"     % "graal-sdk"             % graalMavenPackagesVersion % "provided",
-      "org.graalvm.sdk"     % "polyglot-tck"          % graalMavenPackagesVersion % "provided",
-      "org.graalvm.truffle" % "truffle-api"           % graalMavenPackagesVersion % "provided",
-      "org.graalvm.truffle" % "truffle-dsl-processor" % graalMavenPackagesVersion % "provided",
-      "org.graalvm.truffle" % "truffle-tck"           % graalMavenPackagesVersion % "provided",
-      "org.graalvm.truffle" % "truffle-tck-common"    % graalMavenPackagesVersion % "provided",
-      "org.scalacheck"     %% "scalacheck"            % scalacheckVersion         % Test,
-      "org.scalactic"      %% "scalactic"             % scalacticVersion          % Test,
-      "org.scalatest"      %% "scalatest"             % scalatestVersion          % Test,
-      "org.graalvm.truffle" % "truffle-api"           % graalMavenPackagesVersion % Benchmark,
-      "org.typelevel"      %% "cats-core"             % catsVersion,
-      "junit"               % "junit"                 % junitVersion              % Test,
-      "com.github.sbt"      % "junit-interface"       % junitIfVersion            % Test,
-      "org.hamcrest"        % "hamcrest-all"          % hamcrestVersion           % Test,
-      "com.lihaoyi"        %% "fansi"                 % fansiVersion
+    libraryDependencies ++= jmh ++ jaxb ++ circe ++ GraalVM.langsPkgs ++ Seq(
+      "org.apache.commons"   % "commons-lang3"           % commonsLangVersion,
+      "org.apache.tika"      % "tika-core"               % tikaVersion,
+      "org.graalvm.polyglot" % "polyglot"                % graalMavenPackagesVersion % "provided",
+      "org.graalvm.sdk"      % "polyglot-tck"            % graalMavenPackagesVersion % "provided",
+      "org.graalvm.truffle"  % "truffle-api"             % graalMavenPackagesVersion % "provided",
+      "org.graalvm.truffle"  % "truffle-dsl-processor"   % graalMavenPackagesVersion % "provided",
+      "org.graalvm.truffle"  % "truffle-tck"             % graalMavenPackagesVersion % "provided",
+      "org.graalvm.truffle"  % "truffle-tck-common"      % graalMavenPackagesVersion % "provided",
+      "org.netbeans.api"     % "org-openide-util-lookup" % netbeansApiVersion        % "provided",
+      "org.scalacheck"      %% "scalacheck"              % scalacheckVersion         % Test,
+      "org.scalactic"       %% "scalactic"               % scalacticVersion          % Test,
+      "org.scalatest"       %% "scalatest"               % scalatestVersion          % Test,
+      "org.graalvm.truffle"  % "truffle-api"             % graalMavenPackagesVersion % Benchmark,
+      "org.typelevel"       %% "cats-core"               % catsVersion,
+      "junit"                % "junit"                   % junitVersion              % Test,
+      "com.github.sbt"       % "junit-interface"         % junitIfVersion            % Test,
+      "org.hamcrest"         % "hamcrest-all"            % hamcrestVersion           % Test,
+      "org.slf4j"            % "slf4j-nop"               % slf4jVersion              % Benchmark,
+      "org.slf4j"            % "slf4j-api"               % slf4jVersion              % Test
     ),
-    Compile / compile / compileInputs := (Compile / compile / compileInputs)
-      .dependsOn(CopyTruffleJAR.preCompileTask)
-      .value,
-    // Note [Classpath Separation]
-    Test / javaOptions ++= Seq(
-      "-Dgraalvm.locatorDisabled=true",
-      s"--upgrade-module-path=${file("engine/runtime/build-cache/truffle-api.jar").absolutePath}"
+    // Add all GraalVM packages with Runtime scope - we don't need them for compilation,
+    // just provide them at runtime (in module-path).
+    libraryDependencies ++= {
+      val necessaryModules =
+        GraalVM.modules.map(_.withConfigurations(Some(Runtime.name)))
+      val langs =
+        GraalVM.langsPkgs.map(_.withConfigurations(Some(Runtime.name)))
+      val tools =
+        GraalVM.toolsPkgs.map(_.withConfigurations(Some(Runtime.name)))
+      necessaryModules ++ langs ++ tools
+    }
+  )
+  .settings(
+    Test / unmanagedClasspath := (LocalProject(
+      "runtime-fat-jar"
+    ) / Compile / exportedProducts).value,
+    Test / addModules := Seq(
+      (`runtime-test-instruments` / javaModuleName).value,
+      (`runtime-fat-jar` / javaModuleName).value
     ),
+    Test / modulePath := {
+      val updateReport = (Test / update).value
+      val requiredModIds =
+        GraalVM.modules ++ GraalVM.langsPkgs ++ GraalVM.insightPkgs ++ logbackPkg ++ Seq(
+          "org.slf4j"        % "slf4j-api"               % slf4jVersion,
+          "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion
+        )
+      val requiredMods = JPMSUtils.filterModulesFromUpdate(
+        updateReport,
+        requiredModIds,
+        streams.value.log,
+        shouldContainAll = true
+      )
+      val runtimeTestInstrumentsMod =
+        (`runtime-test-instruments` / Compile / exportedProducts).value.head.data
+      val runtimeMod =
+        (`runtime-fat-jar` / Compile / exportedProducts).value.head.data
+      requiredMods ++
+      Seq(runtimeTestInstrumentsMod) ++
+      Seq(runtimeMod)
+    },
+    Test / patchModules := {
+
+      /** All these modules will be in --patch-module cmdline option to java, which means that
+        * for the JVM, it will appear that all the classes contained in these sbt projects are contained
+        * in the `org.enso.runtime` module. In this way, we do not have to assembly the `runtime.jar`
+        * fat jar.
+        */
+      val modulesToPatchIntoRuntime: Seq[File] =
+        (LocalProject(
+          "runtime-instrument-common"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-instrument-id-execution"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-instrument-repl-debugger"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-instrument-runtime-server"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-language-epb"
+        ) / Compile / productDirectories).value ++
+        (LocalProject(
+          "runtime-compiler"
+        ) / Compile / productDirectories).value ++
+        (LocalProject("refactoring-utils") / Compile / productDirectories).value
+      // Patch test-classes into the runtime module. This is standard way to deal with the
+      // split package problem in unit tests. For example, Maven's surefire plugin does this.
+      val testClassesDir = (Test / productDirectories).value.head
+      Map(
+        (`runtime-fat-jar` / javaModuleName).value -> (modulesToPatchIntoRuntime ++ Seq(
+          testClassesDir
+        ))
+      )
+    },
+    Test / addReads := {
+      val runtimeModName = (`runtime-fat-jar` / javaModuleName).value
+      val testInstrumentsModName =
+        (`runtime-test-instruments` / javaModuleName).value
+      Map(
+        // We patched the test-classes into the runtime module. These classes access some stuff from
+        // unnamed module. Thus, let's add ALL-UNNAMED.
+        runtimeModName         -> Seq("ALL-UNNAMED", testInstrumentsModName),
+        testInstrumentsModName -> Seq(runtimeModName)
+      )
+    },
+    Test / javaOptions ++= testLogProviderOptions
+  )
+  .settings(
     Test / fork := true,
     Test / envVars ++= distributionEnvironmentOverrides ++ Map(
       "ENSO_TEST_DISABLE_IR_CACHE" -> "false"
-    ),
-    Global / onLoad := GraalVersionCheck.addVersionCheck(
-      graalVersion
-    )((Global / onLoad).value),
-    bootstrap := CopyTruffleJAR.bootstrapJARs.value
+    )
   )
   .settings(
     (Compile / javacOptions) ++= Seq(
@@ -1378,6 +1675,7 @@ lazy val runtime = (project in file("engine/runtime"))
     (Runtime / compile) := (Runtime / compile)
       .dependsOn(`std-base` / Compile / packageBin)
       .dependsOn(`enso-test-java-helpers` / Compile / packageBin)
+      .dependsOn(`benchmark-java-helpers` / Compile / packageBin)
       .dependsOn(`exploratory-benchmark-java-helpers` / Compile / packageBin)
       .dependsOn(`std-image` / Compile / packageBin)
       .dependsOn(`std-database` / Compile / packageBin)
@@ -1387,7 +1685,15 @@ lazy val runtime = (project in file("engine/runtime"))
       .value
   )
   .settings(
-    bench := (Benchmark / test).tag(Exclusive).value,
+    bench := (Benchmark / test)
+      .tag(Exclusive)
+      .dependsOn(
+        // runtime.jar fat jar needs to be assembled as it is used in the
+        // benchmarks. This dependency is here so that `runtime/bench` works
+        // after clean build.
+        LocalProject("runtime-fat-jar") / assembly
+      )
+      .value,
     benchOnly := Def.inputTaskDyn {
       import complete.Parsers.spaceDelimited
       val name = spaceDelimited("<name>").parsed match {
@@ -1397,34 +1703,76 @@ lazy val runtime = (project in file("engine/runtime"))
       Def.task {
         (Benchmark / testOnly).toTask(" -- -z " + name).value
       }
-    }.evaluated,
+    }.evaluated
+  )
+  /** Benchmark settings */
+  .settings(
+    inConfig(Benchmark)(Defaults.testSettings),
+    Benchmark / javacOptions --= Seq(
+      "-source",
+      frgaalSourceLevel,
+      "--enable-preview"
+    ),
+    (Benchmark / javaOptions) :=
+      (LocalProject("std-benchmarks") / Benchmark / run / javaOptions).value,
+    (Benchmark / javaOptions) ++= benchOnlyOptions,
+    Benchmark / fork := true,
     Benchmark / parallelExecution := false
   )
   .dependsOn(`common-polyglot-core-utils`)
   .dependsOn(`edition-updater`)
   .dependsOn(`interpreter-dsl`)
+  .dependsOn(`persistance-dsl` % "provided")
   .dependsOn(`library-manager`)
   .dependsOn(`logging-truffle-connector`)
   .dependsOn(`polyglot-api`)
   .dependsOn(`text-buffer`)
-  .dependsOn(`runtime-parser`)
-  .dependsOn(pkg)
+  .dependsOn(`runtime-compiler`)
   .dependsOn(`connected-lock-manager`)
   .dependsOn(testkit % Test)
+  .dependsOn(`logging-service-logback` % "test->test")
+  .dependsOn(`runtime-test-instruments` % "test->compile")
 
 lazy val `runtime-parser` =
   (project in file("engine/runtime-parser"))
     .settings(
       frgaalJavaCompilerSetting,
-      instrumentationSettings,
+      commands += WithDebugCommand.withDebug,
+      fork := true,
+      Test / javaOptions ++= Seq(
+        "-Dgraalvm.locatorDisabled=true",
+        s"--upgrade-module-path=${file("engine/runtime/build-cache/truffle-api.jar").absolutePath}"
+      ),
       libraryDependencies ++= Seq(
-        "junit"          % "junit"           % junitVersion     % Test,
-        "com.github.sbt" % "junit-interface" % junitIfVersion   % Test,
-        "org.scalatest" %% "scalatest"       % scalatestVersion % Test
+        "junit"            % "junit"                   % junitVersion       % Test,
+        "com.github.sbt"   % "junit-interface"         % junitIfVersion     % Test,
+        "org.scalatest"   %% "scalatest"               % scalatestVersion   % Test,
+        "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion % "provided"
       )
     )
     .dependsOn(syntax)
     .dependsOn(`syntax-rust-definition`)
+    .dependsOn(`persistance`)
+    .dependsOn(`persistance-dsl` % "provided")
+
+lazy val `runtime-compiler` =
+  (project in file("engine/runtime-compiler"))
+    .settings(
+      frgaalJavaCompilerSetting,
+      instrumentationSettings,
+      libraryDependencies ++= Seq(
+        "junit"            % "junit"                   % junitVersion       % Test,
+        "com.github.sbt"   % "junit-interface"         % junitIfVersion     % Test,
+        "org.scalatest"   %% "scalatest"               % scalatestVersion   % Test,
+        "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion % "provided",
+        "com.lihaoyi"     %% "fansi"                   % fansiVersion
+      )
+    )
+    .dependsOn(`runtime-parser`)
+    .dependsOn(pkg)
+    .dependsOn(`polyglot-api`)
+    .dependsOn(editions)
+    .dependsOn(`persistance-dsl` % "provided")
 
 lazy val `runtime-instrument-common` =
   (project in file("engine/runtime-instrument-common"))
@@ -1435,11 +1783,12 @@ lazy val `runtime-instrument-common` =
       inConfig(Benchmark)(Defaults.testSettings),
       instrumentationSettings,
       Test / javaOptions ++= Seq(
-        "-Dgraalvm.locatorDisabled=true",
-        s"--upgrade-module-path=${file("engine/runtime/build-cache/truffle-api.jar").absolutePath}"
+        "-Dpolyglotimpl.DisableClassPathIsolation=true"
       ),
       bench := (Benchmark / test).tag(Exclusive).value,
       Benchmark / parallelExecution := false,
+      (Benchmark / javaOptions) :=
+        (LocalProject("std-benchmarks") / Benchmark / run / javaOptions).value,
       Test / fork := true,
       Test / envVars ++= distributionEnvironmentOverrides ++ Map(
         "ENSO_TEST_DISABLE_IR_CACHE" -> "false"
@@ -1447,7 +1796,9 @@ lazy val `runtime-instrument-common` =
     )
     .dependsOn(`refactoring-utils`)
     .dependsOn(
-      runtime % "compile->compile;test->test;runtime->runtime;bench->bench"
+      LocalProject(
+        "runtime"
+      ) % "compile->compile;test->test;runtime->runtime;bench->bench"
     )
 
 lazy val `runtime-instrument-id-execution` =
@@ -1457,7 +1808,7 @@ lazy val `runtime-instrument-id-execution` =
       inConfig(Compile)(truffleRunOptionsSettings),
       instrumentationSettings
     )
-    .dependsOn(runtime)
+    .dependsOn(LocalProject("runtime"))
     .dependsOn(`runtime-instrument-common`)
 
 lazy val `runtime-instrument-repl-debugger` =
@@ -1466,7 +1817,7 @@ lazy val `runtime-instrument-repl-debugger` =
       inConfig(Compile)(truffleRunOptionsSettings),
       instrumentationSettings
     )
-    .dependsOn(runtime)
+    .dependsOn(LocalProject("runtime"))
     .dependsOn(`runtime-instrument-common`)
 
 lazy val `runtime-instrument-runtime-server` =
@@ -1475,41 +1826,84 @@ lazy val `runtime-instrument-runtime-server` =
       inConfig(Compile)(truffleRunOptionsSettings),
       instrumentationSettings
     )
-    .dependsOn(runtime)
+    .dependsOn(LocalProject("runtime"))
     .dependsOn(`runtime-instrument-common`)
 
-lazy val `runtime-with-instruments` =
-  (project in file("engine/runtime-with-instruments"))
-    .configs(Benchmark)
+/** A "meta" project that exists solely to provide logic for assembling the `runtime.jar` fat Jar.
+  * We do not want to put this task into any other existing project, as it internally copies some
+  * classes from other projects into the `classes` directory, therefore, pollutes the build.
+  * There is only one Java source in this project - `module-info.java`. During the assembling of the
+  * fat jar, all the classes from the dependent projects are copied into the `classes` directory of
+  * this project and then, a custom task is invoked to compile the `module-info.java`.
+  */
+lazy val `runtime-fat-jar` =
+  (project in file("engine/runtime-fat-jar"))
+    .enablePlugins(JPMSPlugin)
     .settings(
-      frgaalJavaCompilerSetting,
-      truffleDslSuppressWarnsSetting,
-      inConfig(Compile)(truffleRunOptionsSettings),
-      inConfig(Benchmark)(Defaults.testSettings),
-      commands += WithDebugCommand.withDebug,
-      Benchmark / javacOptions --= Seq(
-        "-source",
-        frgaalSourceLevel,
-        "--enable-preview"
-      ),
-      Test / javaOptions ++= Seq(
-        "-Dgraalvm.locatorDisabled=true",
-        s"--upgrade-module-path=${file("engine/runtime/build-cache/truffle-api.jar").absolutePath}"
-      ),
-      Test / fork := true,
-      Test / envVars ++= distributionEnvironmentOverrides ++ Map(
-        "ENSO_TEST_DISABLE_IR_CACHE" -> "false"
-      ),
-      libraryDependencies ++= Seq(
-        "org.scalatest"      %% "scalatest"             % scalatestVersion          % Test,
-        "org.graalvm.truffle" % "truffle-api"           % graalMavenPackagesVersion % Test,
-        "org.graalvm.truffle" % "truffle-dsl-processor" % graalMavenPackagesVersion % Test
-      ),
-      // Note [Unmanaged Classpath]
-      Test / unmanagedClasspath += (baseDirectory.value / ".." / ".." / "app" / "gui" / "view" / "graph-editor" / "src" / "builtin" / "visualization" / "native" / "inc"),
+      Compile / compileModuleInfo := {
+        JPMSUtils.compileModuleInfo(
+          copyDepsFilter = ScopeFilter(
+            inProjects(
+              LocalProject("runtime"),
+              LocalProject("runtime-language-epb"),
+              LocalProject("runtime-instrument-common"),
+              LocalProject("runtime-instrument-id-execution"),
+              LocalProject("runtime-instrument-repl-debugger"),
+              LocalProject("runtime-instrument-runtime-server")
+            ),
+            inConfigurations(Compile)
+          ),
+          modulePath = JPMSUtils.componentModules
+        )
+      }
+        .dependsOn(Compile / compile)
+        .value,
+      // Filter module-info.java from the compilation
+      excludeFilter := excludeFilter.value || "module-info.java",
+      javaModuleName := "org.enso.runtime",
+      compileOrder := CompileOrder.JavaThenScala
+    )
+    /** The following libraryDependencies are provided in Runtime scope.
+      * Later, we will collect them into --module-path option.
+      * We don't collect them in Compile scope as it does not even make sense
+      * to run `compile` task in this project.
+      */
+    .settings(
+      libraryDependencies ++= {
+        val graalMods =
+          GraalVM.modules.map(_.withConfigurations(Some(Runtime.name)))
+        val langMods =
+          GraalVM.langsPkgs.map(_.withConfigurations(Some(Runtime.name)))
+        val logbackMods =
+          logbackPkg.map(_.withConfigurations(Some(Runtime.name)))
+        graalMods ++ langMods ++ logbackMods
+      }
+    )
+    /** Assembling Uber Jar */
+    .settings(
+      assembly := assembly
+        .dependsOn(Compile / compile)
+        .dependsOn(Compile / compileModuleInfo)
+        .value,
       assembly / assemblyJarName := "runtime.jar",
       assembly / test := {},
       assembly / assemblyOutputPath := file("runtime.jar"),
+      assembly / assemblyExcludedJars := {
+        // bouncycastle jdk5 needs to be excluded from the Uber jar, as otherwise its packages would
+        // clash with packages in org.bouncycastle.jdk18 modules
+        val bouncyCastleJdk5 = Seq(
+          "org.bouncycastle" % "bcutil-jdk15on" % bcpkixJdk15Version,
+          "org.bouncycastle" % "bcpkix-jdk15on" % bcpkixJdk15Version,
+          "org.bouncycastle" % "bcprov-jdk15on" % bcpkixJdk15Version
+        )
+        val pkgsToExclude = JPMSUtils.componentModules ++ bouncyCastleJdk5
+        val ourFullCp     = (Runtime / fullClasspath).value
+        JPMSUtils.filterModulesFromClasspath(
+          ourFullCp,
+          pkgsToExclude,
+          streams.value.log
+        )
+      },
       assembly / assemblyMergeStrategy := {
         case PathList("META-INF", file, xs @ _*) if file.endsWith(".DSA") =>
           MergeStrategy.discard
@@ -1519,66 +1913,17 @@ lazy val `runtime-with-instruments` =
           MergeStrategy.discard
         case PathList("META-INF", "services", xs @ _*) =>
           MergeStrategy.concat
+        case PathList(xs @ _*) if xs.last.contains("module-info") =>
+          JPMSUtils.removeAllModuleInfoExcept("runtime")
         case _ => MergeStrategy.first
       }
     )
-    .dependsOn(runtime % "compile->compile;test->test;runtime->runtime")
     .dependsOn(`runtime-instrument-common`)
     .dependsOn(`runtime-instrument-id-execution`)
     .dependsOn(`runtime-instrument-repl-debugger`)
     .dependsOn(`runtime-instrument-runtime-server`)
     .dependsOn(`runtime-language-epb`)
-
-/* runtime-with-polyglot
- * ~~~~~~~~~~~~~~~~~~~~~
- * A project that allows loading polyglot languages by not disabling
- * the GraalVM locator explicitly with `-Dgraalvm.locatorDisabled=true` like the
- * `runtime-with-instruments` project does. It means that the test classes and
- * runtime classes are loaded using different classloaders, and the test code
- * cannot access the `EnsoContext`.
- */
-
-lazy val `runtime-with-polyglot` =
-  (project in file("engine/runtime-with-polyglot"))
-    .configs(Benchmark)
-    .settings(
-      frgaalJavaCompilerSetting,
-      truffleDslSuppressWarnsSetting,
-      inConfig(Compile)(truffleRunOptionsNoAssertSettings),
-      inConfig(Benchmark)(Defaults.testSettings),
-      commands += WithDebugCommand.withDebug,
-      Benchmark / javacOptions --= Seq(
-        "-source",
-        frgaalSourceLevel,
-        "--enable-preview"
-      ),
-      Test / javaOptions ++= {
-        // Note [Classpath Separation]
-        val runtimeClasspath =
-          (LocalProject("runtime") / Compile / fullClasspath).value
-        val runtimeInstrumentsClasspath =
-          (LocalProject(
-            "runtime-with-instruments"
-          ) / Compile / fullClasspath).value
-        val appendClasspath =
-          (runtimeClasspath ++ runtimeInstrumentsClasspath)
-            .map(_.data)
-            .mkString(File.pathSeparator)
-        Seq(
-          s"-Dtruffle.class.path.append=$appendClasspath"
-        )
-      },
-      Test / fork := true,
-      Test / envVars ++= distributionEnvironmentOverrides ++ Map(
-        "ENSO_TEST_DISABLE_IR_CACHE" -> "false"
-      ),
-      libraryDependencies ++= Seq(
-        "org.graalvm.sdk" % "graal-sdk" % graalMavenPackagesVersion % "provided",
-        "org.scalatest"  %% "scalatest" % scalatestVersion          % Test
-      )
-    )
-    .dependsOn(runtime % "compile->compile;test->test;runtime->runtime")
-    .dependsOn(`runtime-with-instruments`)
+    .dependsOn(LocalProject("runtime"))
 
 /* Note [Unmanaged Classpath]
  * ~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -1618,6 +1963,10 @@ lazy val `engine-runner` = project
     assembly / assemblyJarName := "runner.jar",
     assembly / test := {},
     assembly / assemblyOutputPath := file("runner.jar"),
+    assembly / assemblyExcludedJars :=
+      JPMSUtils.filterTruffleAndGraalArtifacts(
+        (Compile / fullClasspath).value
+      ),
     assembly / assemblyMergeStrategy := {
       case PathList("META-INF", file, xs @ _*) if file.endsWith(".DSA") =>
         MergeStrategy.discard
@@ -1629,6 +1978,9 @@ lazy val `engine-runner` = project
         MergeStrategy.concat
       case "reference.conf" =>
         MergeStrategy.concat
+      case PathList(xs @ _*) if xs.last.contains("module-info") =>
+        // runner.jar must not be a JPMS module
+        MergeStrategy.discard
       case x =>
         MergeStrategy.first
     },
@@ -1646,54 +1998,45 @@ lazy val `engine-runner` = project
   )
   .settings(
     assembly := assembly
-      .dependsOn(`runtime-with-instruments` / assembly)
+      .dependsOn(`runtime-fat-jar` / assembly)
       .value,
-    rebuildNativeImage := NativeImage
-      .buildNativeImage(
-        "runner",
-        staticOnLinux = false,
-        additionalOptions = Seq(
-          "-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.NoOpLog",
-          "-H:IncludeResources=.*Main.enso$",
-          "--macro:truffle",
-          "--language:js",
-          // "-g",
-          //          "-H:+DashboardAll",
-          //          "-H:DashboardDump=runner.bgv"
-          "-Dnic=nic"
-        ) ++ (if (
-                org.graalvm.polyglot.Engine
-                  .create()
-                  .getLanguages()
-                  .containsKey("java")
-              ) {
-                Seq(
-                  "-Dorg.graalvm.launcher.home=" + System.getProperty(
-                    "java.home"
-                  ),
-                  "--language:java"
-                )
-              } else {
-                Seq()
-              }),
-        mainClass = Option("org.enso.runner.Main"),
-        cp        = Option("runtime.jar"),
-        initializeAtRuntime = Seq(
-          "org.jline.nativ.JLineLibrary",
-          "io.methvin.watchservice.jna.CarbonAPI",
-          "org.enso.syntax2.Parser",
-          "zio.internal.ZScheduler$$anon$4",
-          "org.enso.runner.Main$",
-          "sun.awt",
-          "sun.java2d",
-          "sun.font",
-          "java.awt",
-          "com.sun.imageio",
-          "akka.http"
+    rebuildNativeImage :=
+      NativeImage
+        .buildNativeImage(
+          "runner",
+          staticOnLinux = false,
+          additionalOptions = Seq(
+            "-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.NoOpLog",
+            "-H:IncludeResources=.*Main.enso$",
+            // "-g",
+            //          "-H:+DashboardAll",
+            //          "-H:DashboardDump=runner.bgv"
+            "-Dnic=nic"
+          ),
+          mainClass = Some("org.enso.runner.Main"),
+          additionalCp = Seq(
+            "runtime.jar",
+            "runner.jar"
+          ),
+          initializeAtRuntime = Seq(
+            "org.jline.nativ.JLineLibrary",
+            "org.jline.terminal.impl.jna",
+            "io.methvin.watchservice.jna.CarbonAPI",
+            "org.enso.syntax2.Parser",
+            "zio.internal.ZScheduler$$anon$4",
+            "org.enso.runner.Main$",
+            "sun.awt",
+            "sun.java2d",
+            "sun.font",
+            "java.awt",
+            "com.sun.imageio",
+            "com.sun.jna.internal.Cleaner",
+            "com.sun.jna.Structure$FFIType",
+            "akka.http"
+          )
         )
-      )
-      .dependsOn(assembly)
-      .value,
+        .dependsOn(assembly)
+        .value,
     buildNativeImage := NativeImage
       .incrementalNativeImageBuild(
         rebuildNativeImage,
@@ -1733,7 +2076,9 @@ lazy val launcher = project
         additionalOptions = Seq(
           "-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.NoOpLog",
           "-H:IncludeResources=.*Main.enso$"
-        )
+        ),
+        includeRuntime = false,
+        mainClass      = Some("org.enso.launcher.cli.Main")
       )
       .dependsOn(assembly)
       .dependsOn(VerifyReflectionSetup.run)
@@ -1755,11 +2100,16 @@ lazy val launcher = project
         MergeStrategy.discard
       case "application.conf" => MergeStrategy.concat
       case "reference.conf"   => MergeStrategy.concat
+      // launcher.jar must not be an explicit Jar module
+      case PathList(xs @ _*) if xs.last.contains("module-info") =>
+        MergeStrategy.discard
       case x =>
         MergeStrategy.first
     }
   )
   .settings(
+    Test / fork := true,
+    Test / javaOptions ++= testLogProviderOptions,
     (Test / test) := (Test / test)
       .dependsOn(buildNativeImage)
       .dependsOn(LauncherShimsForTest.prepare())
@@ -1777,8 +2127,7 @@ lazy val launcher = project
   .dependsOn(pkg)
   .dependsOn(`logging-utils` % "test->test")
   .dependsOn(`logging-service`)
-  .dependsOn(`logging-service-logback` % Test)
-  .dependsOn(`logging-service-logback` % Runtime)
+  .dependsOn(`logging-service-logback` % "test->test;runtime->runtime")
   .dependsOn(`distribution-manager` % Test)
   .dependsOn(`runtime-version-manager-test` % Test)
 
@@ -1804,15 +2153,15 @@ lazy val `bench-processor` = (project in file("lib/scala/bench-processor"))
   .settings(
     frgaalJavaCompilerSetting,
     libraryDependencies ++= Seq(
-      "jakarta.xml.bind"    % "jakarta.xml.bind-api"     % jaxbVersion,
-      "com.sun.xml.bind"    % "jaxb-impl"                % jaxbVersion,
-      "org.openjdk.jmh"     % "jmh-core"                 % jmhVersion                % "provided",
-      "org.openjdk.jmh"     % "jmh-generator-annprocess" % jmhVersion                % "provided",
-      "org.netbeans.api"    % "org-openide-util-lookup"  % netbeansApiVersion        % "provided",
-      "org.graalvm.sdk"     % "graal-sdk"                % graalMavenPackagesVersion % "provided",
-      "junit"               % "junit"                    % junitVersion              % Test,
-      "com.github.sbt"      % "junit-interface"          % junitIfVersion            % Test,
-      "org.graalvm.truffle" % "truffle-api"              % graalMavenPackagesVersion % Test
+      "jakarta.xml.bind"     % "jakarta.xml.bind-api"     % jaxbVersion,
+      "com.sun.xml.bind"     % "jaxb-impl"                % jaxbVersion,
+      "org.openjdk.jmh"      % "jmh-core"                 % jmhVersion                % "provided",
+      "org.openjdk.jmh"      % "jmh-generator-annprocess" % jmhVersion                % "provided",
+      "org.netbeans.api"     % "org-openide-util-lookup"  % netbeansApiVersion        % "provided",
+      "org.graalvm.polyglot" % "polyglot"                 % graalMavenPackagesVersion % "provided",
+      "junit"                % "junit"                    % junitVersion              % Test,
+      "com.github.sbt"       % "junit-interface"          % junitIfVersion            % Test,
+      "org.graalvm.truffle"  % "truffle-api"              % graalMavenPackagesVersion % Test
     ),
     Compile / javacOptions := ((Compile / javacOptions).value ++
     // Only run ServiceProvider processor and ignore those defined in META-INF, thus
@@ -1821,17 +2170,18 @@ lazy val `bench-processor` = (project in file("lib/scala/bench-processor"))
       "-processor",
       "org.netbeans.modules.openide.util.ServiceProviderProcessor"
     )),
+    mainClass := Some("org.enso.benchmarks.libs.LibBenchRunner"),
     commands += WithDebugCommand.withDebug,
     (Test / fork) := true,
     (Test / parallelExecution) := false,
-    (Test / javaOptions) ++= {
-      val runtimeJars =
-        (LocalProject("runtime") / Compile / fullClasspath).value
-      val jarsStr = runtimeJars.map(_.data).mkString(File.pathSeparator)
+    (Test / javaOptions) ++=
       Seq(
-        s"-Dtruffle.class.path.append=${jarsStr}"
-      )
-    }
+        "-Dpolyglot.engine.WarnInterpreterOnly=false",
+        "-Dpolyglotimpl.DisableClassPathIsolation=true"
+      ),
+    // Append enso language on the class-path
+    (Test / unmanagedClasspath) :=
+      (LocalProject("runtime-fat-jar") / Compile / fullClasspath).value
   )
   .dependsOn(`polyglot-api`)
   .dependsOn(runtime)
@@ -1840,10 +2190,21 @@ lazy val `std-benchmarks` = (project in file("std-bits/benchmarks"))
   .settings(
     frgaalJavaCompilerSetting,
     libraryDependencies ++= jmh ++ Seq(
-      "org.openjdk.jmh" % "jmh-core"                 % jmhVersion                % Benchmark,
-      "org.openjdk.jmh" % "jmh-generator-annprocess" % jmhVersion                % Benchmark,
-      "org.graalvm.sdk" % "graal-sdk"                % graalMavenPackagesVersion % Benchmark
+      "org.openjdk.jmh"      % "jmh-core"                 % jmhVersion                % Benchmark,
+      "org.openjdk.jmh"      % "jmh-generator-annprocess" % jmhVersion                % Benchmark,
+      "org.graalvm.polyglot" % "polyglot"                 % graalMavenPackagesVersion % Benchmark,
+      "org.slf4j"            % "slf4j-api"                % slf4jVersion              % Benchmark,
+      "org.slf4j"            % "slf4j-nop"                % slf4jVersion              % Benchmark
     ),
+    // Add all GraalVM packages with Benchmark scope - we don't need them for compilation,
+    // just provide them for benchmarks (in module-path).
+    libraryDependencies ++= {
+      val necessaryModules =
+        GraalVM.modules.map(_.withConfigurations(Some(Benchmark.name)))
+      val langs =
+        GraalVM.langsPkgs.map(_.withConfigurations(Some(Benchmark.name)))
+      necessaryModules ++ langs
+    },
     commands += WithDebugCommand.withDebug,
     (Compile / logManager) :=
       sbt.internal.util.CustomLogManager.excludeMsg(
@@ -1859,42 +2220,54 @@ lazy val `std-benchmarks` = (project in file("std-bits/benchmarks"))
     (Benchmark / parallelExecution) := false,
     (Benchmark / run / fork) := true,
     (Benchmark / run / connectInput) := true,
-    // Pass -Dtruffle.class.path.append to javac
-    (Benchmark / compile / javacOptions) ++= {
-      val runtimeClasspath =
-        (LocalProject("runtime") / Compile / fullClasspath).value
-      val runtimeInstrumentsClasspath =
-        (LocalProject(
-          "runtime-with-instruments"
-        ) / Compile / fullClasspath).value
-      val appendClasspath =
-        (runtimeClasspath ++ runtimeInstrumentsClasspath)
-          .map(_.data)
-          .mkString(File.pathSeparator)
-      Seq(
-        s"-J-Dtruffle.class.path.append=$appendClasspath"
-      )
-    },
+    // This ensures that the full class-path of runtime-fat-jar is put on
+    // class-path of the Java compiler (and thus the benchmark annotation processor).
+    (Benchmark / compile / unmanagedClasspath) ++=
+      (LocalProject(
+        "runtime-fat-jar"
+      ) / Compile / fullClasspath).value,
     (Benchmark / compile / javacOptions) ++= Seq(
       "-s",
       (Benchmark / sourceManaged).value.getAbsolutePath,
-      "-Xlint:unchecked"
+      "-Xlint:unchecked",
+      "-J-Dpolyglotimpl.DisableClassPathIsolation=true",
+      "-J-Dpolyglot.engine.WarnInterpreterOnly=false"
     ),
     (Benchmark / run / javaOptions) ++= {
-      val runtimeClasspath =
-        (LocalProject("runtime") / Compile / fullClasspath).value
-      val runtimeInstrumentsClasspath =
-        (LocalProject(
-          "runtime-with-instruments"
-        ) / Compile / fullClasspath).value
-      val appendClasspath =
-        (runtimeClasspath ++ runtimeInstrumentsClasspath)
-          .map(_.data)
-          .mkString(File.pathSeparator)
-      Seq(
-        s"-Dtruffle.class.path.append=$appendClasspath"
+      val requiredModules = GraalVM.modules ++ GraalVM.langsPkgs ++ Seq(
+        "org.slf4j" % "slf4j-api" % slf4jVersion,
+        "org.slf4j" % "slf4j-nop" % slf4jVersion
       )
-    }
+      val requiredModulesCp = JPMSUtils.filterModulesFromClasspath(
+        (Benchmark / fullClasspath).value,
+        requiredModules,
+        streams.value.log,
+        shouldContainAll = true
+      )
+      val requiredModulesPaths = requiredModulesCp
+        .map(_.data.getAbsolutePath)
+      val runtimeJar =
+        (LocalProject(
+          "runtime-fat-jar"
+        ) / assembly / assemblyOutputPath).value.getAbsolutePath
+      val allModulePaths = requiredModulesPaths ++ Seq(runtimeJar)
+      val runtimeModuleName =
+        (LocalProject(
+          "runtime-fat-jar"
+        ) / javaModuleName).value
+      Seq(
+        // To enable logging in benchmarks, add ch.qos.logback module on the modulePath
+        "-Dslf4j.provider=org.slf4j.nop.NOPServiceProvider",
+        "--module-path",
+        allModulePaths.mkString(File.pathSeparator),
+        "--add-modules",
+        runtimeModuleName,
+        "--add-exports",
+        "org.slf4j.nop/org.slf4j.nop=org.slf4j"
+      )
+    },
+    (Benchmark / run / mainClass) :=
+      (LocalProject("bench-processor") / mainClass).value
   )
   .settings(
     bench := Def
@@ -2013,6 +2386,8 @@ lazy val `library-manager-test` = project
   .configs(Test)
   .settings(
     frgaalJavaCompilerSetting,
+    Test / fork := true,
+    Test / javaOptions ++= testLogProviderOptions,
     Test / test := (Test / test).tag(simpleLibraryServerTag).value,
     libraryDependencies ++= Seq(
       "com.typesafe.scala-logging" %% "scala-logging" % scalaLoggingVersion,
@@ -2022,6 +2397,7 @@ lazy val `library-manager-test` = project
   .dependsOn(`library-manager`)
   .dependsOn(`logging-utils` % "test->test")
   .dependsOn(testkit)
+  .dependsOn(`logging-service-logback` % "test->test")
 
 lazy val `connected-lock-manager` = project
   .in(file("lib/scala/connected-lock-manager"))
@@ -2109,11 +2485,15 @@ lazy val `std-base` = project
   .settings(
     frgaalJavaCompilerSetting,
     autoScalaLibrary := false,
+    Compile / compile / compileInputs := (Compile / compile / compileInputs)
+      .dependsOn(SPIHelpers.ensureSPIConsistency)
+      .value,
     Compile / packageBin / artifactPath :=
       `base-polyglot-root` / "std-base.jar",
     libraryDependencies ++= Seq(
-      "org.graalvm.sdk"  % "graal-sdk"               % graalMavenPackagesVersion % "provided",
-      "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion        % "provided"
+      "org.graalvm.polyglot"      % "polyglot"                % graalMavenPackagesVersion,
+      "org.apache.httpcomponents" % "httpclient"              % httpComponentsVersion,
+      "org.netbeans.api"          % "org-openide-util-lookup" % netbeansApiVersion % "provided"
     ),
     Compile / packageBin := Def.task {
       val result = (Compile / packageBin).value
@@ -2139,8 +2519,8 @@ lazy val `common-polyglot-core-utils` = project
     Compile / packageBin / artifactPath :=
       `base-polyglot-root` / "common-polyglot-core-utils.jar",
     libraryDependencies ++= Seq(
-      "com.ibm.icu"     % "icu4j"     % icuVersion,
-      "org.graalvm.sdk" % "graal-sdk" % graalMavenPackagesVersion % "provided"
+      "com.ibm.icu"          % "icu4j"    % icuVersion,
+      "org.graalvm.polyglot" % "polyglot" % graalMavenPackagesVersion % "provided"
     )
   )
 
@@ -2152,7 +2532,7 @@ lazy val `enso-test-java-helpers` = project
     Compile / packageBin / artifactPath :=
       file("test/Tests/polyglot/java/helpers.jar"),
     libraryDependencies ++= Seq(
-      "org.graalvm.sdk" % "graal-sdk" % graalMavenPackagesVersion % "provided"
+      "org.graalvm.polyglot" % "polyglot" % graalMavenPackagesVersion % "provided"
     ),
     Compile / packageBin := Def.task {
       val result          = (Compile / packageBin).value
@@ -2183,6 +2563,26 @@ lazy val `exploratory-benchmark-java-helpers` = project
         "test/Exploratory_Benchmarks/polyglot/java/exploratory-benchmark-java-helpers.jar"
       ),
     libraryDependencies ++= Seq(
+      "org.graalvm.polyglot" % "polyglot" % graalMavenPackagesVersion % "provided"
+    )
+  )
+  .dependsOn(`std-base` % "provided")
+  .dependsOn(`std-table` % "provided")
+
+lazy val `benchmark-java-helpers` = project
+  .in(
+    file(
+      "test/Benchmarks/polyglot-sources/benchmark-java-helpers"
+    )
+  )
+  .settings(
+    frgaalJavaCompilerSetting,
+    autoScalaLibrary := false,
+    Compile / packageBin / artifactPath :=
+      file(
+        "test/Benchmarks/polyglot/java/benchmark-java-helpers.jar"
+      ),
+    libraryDependencies ++= Seq(
       "org.graalvm.sdk" % "graal-sdk" % graalMavenPackagesVersion % "provided"
     )
   )
@@ -2195,6 +2595,9 @@ lazy val `std-table` = project
   .settings(
     frgaalJavaCompilerSetting,
     autoScalaLibrary := false,
+    Compile / compile / compileInputs := (Compile / compile / compileInputs)
+      .dependsOn(SPIHelpers.ensureSPIConsistency)
+      .value,
     Compile / packageBin / artifactPath :=
       `table-polyglot-root` / "std-table.jar",
     Antlr4 / antlr4PackageName := Some("org.enso.table.expressions"),
@@ -2205,7 +2608,7 @@ lazy val `std-table` = project
       (Antlr4 / sourceManaged).value / "main" / "antlr4"
     },
     libraryDependencies ++= Seq(
-      "org.graalvm.sdk"          % "graal-sdk"               % graalMavenPackagesVersion % "provided",
+      "org.graalvm.polyglot"     % "polyglot"                % graalMavenPackagesVersion % "provided",
       "org.netbeans.api"         % "org-openide-util-lookup" % netbeansApiVersion        % "provided",
       "com.univocity"            % "univocity-parsers"       % univocityParsersVersion,
       "org.apache.poi"           % "poi-ooxml"               % poiOoxmlVersion,
@@ -2232,12 +2635,15 @@ lazy val `std-image` = project
   .settings(
     frgaalJavaCompilerSetting,
     autoScalaLibrary := false,
+    Compile / compile / compileInputs := (Compile / compile / compileInputs)
+      .dependsOn(SPIHelpers.ensureSPIConsistency)
+      .value,
     Compile / packageBin / artifactPath :=
       `image-polyglot-root` / "std-image.jar",
     libraryDependencies ++= Seq(
-      "org.graalvm.sdk"  % "graal-sdk"               % graalMavenPackagesVersion % "provided",
-      "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion        % "provided",
-      "org.openpnp"      % "opencv"                  % "4.7.0-0"
+      "org.graalvm.polyglot" % "polyglot"                % graalMavenPackagesVersion % "provided",
+      "org.netbeans.api"     % "org-openide-util-lookup" % netbeansApiVersion        % "provided",
+      "org.openpnp"          % "opencv"                  % "4.7.0-0"
     ),
     Compile / packageBin := Def.task {
       val result = (Compile / packageBin).value
@@ -2258,6 +2664,9 @@ lazy val `std-google-api` = project
   .settings(
     frgaalJavaCompilerSetting,
     autoScalaLibrary := false,
+    Compile / compile / compileInputs := (Compile / compile / compileInputs)
+      .dependsOn(SPIHelpers.ensureSPIConsistency)
+      .value,
     Compile / packageBin / artifactPath :=
       `google-api-polyglot-root` / "std-google-api.jar",
     libraryDependencies ++= Seq(
@@ -2282,13 +2691,16 @@ lazy val `std-database` = project
   .settings(
     frgaalJavaCompilerSetting,
     autoScalaLibrary := false,
+    Compile / compile / compileInputs := (Compile / compile / compileInputs)
+      .dependsOn(SPIHelpers.ensureSPIConsistency)
+      .value,
     Compile / packageBin / artifactPath :=
       `database-polyglot-root` / "std-database.jar",
     libraryDependencies ++= Seq(
-      "org.graalvm.sdk"  % "graal-sdk"               % graalMavenPackagesVersion % "provided",
-      "org.netbeans.api" % "org-openide-util-lookup" % netbeansApiVersion        % "provided",
-      "org.xerial"       % "sqlite-jdbc"             % sqliteVersion,
-      "org.postgresql"   % "postgresql"              % "42.4.0"
+      "org.graalvm.polyglot" % "polyglot"                % graalMavenPackagesVersion % "provided",
+      "org.netbeans.api"     % "org-openide-util-lookup" % netbeansApiVersion        % "provided",
+      "org.xerial"           % "sqlite-jdbc"             % sqliteVersion,
+      "org.postgresql"       % "postgresql"              % "42.4.0"
     ),
     Compile / packageBin := Def.task {
       val result = (Compile / packageBin).value
@@ -2310,6 +2722,9 @@ lazy val `std-aws` = project
   .settings(
     frgaalJavaCompilerSetting,
     autoScalaLibrary := false,
+    Compile / compile / compileInputs := (Compile / compile / compileInputs)
+      .dependsOn(SPIHelpers.ensureSPIConsistency)
+      .value,
     Compile / packageBin / artifactPath :=
       `std-aws-polyglot-root` / "std-aws.jar",
     libraryDependencies ++= Seq(
@@ -2384,13 +2799,16 @@ lazy val buildEngineDistribution =
 buildEngineDistribution := {
   val _ = (`engine-runner` / assembly).value
   updateLibraryManifests.value
-  val root         = engineDistributionRoot.value
-  val log          = streams.value.log
-  val cacheFactory = streams.value.cacheStoreFactory
+  val modulesToCopy = componentModulesPaths.value.map(_.data)
+  val engineModules = Seq(file("runtime.jar"))
+  val root          = engineDistributionRoot.value
+  val log           = streams.value.log
+  val cacheFactory  = streams.value.cacheStoreFactory
   DistributionPackage.createEnginePackage(
     distributionRoot    = root,
     cacheFactory        = cacheFactory,
     log                 = log,
+    jarModulesToCopy    = modulesToCopy ++ engineModules,
     graalVersion        = graalMavenPackagesVersion,
     javaVersion         = graalVersion,
     ensoVersion         = ensoVersion,
@@ -2414,13 +2832,16 @@ lazy val buildEngineDistributionNoIndex =
 buildEngineDistributionNoIndex := {
   val _ = (`engine-runner` / assembly).value
   updateLibraryManifests.value
-  val root         = engineDistributionRoot.value
-  val log          = streams.value.log
-  val cacheFactory = streams.value.cacheStoreFactory
+  val modulesToCopy = componentModulesPaths.value.map(_.data)
+  val engineModules = Seq(file("runtime.jar"))
+  val root          = engineDistributionRoot.value
+  val log           = streams.value.log
+  val cacheFactory  = streams.value.cacheStoreFactory
   DistributionPackage.createEnginePackage(
     distributionRoot    = root,
     cacheFactory        = cacheFactory,
     log                 = log,
+    jarModulesToCopy    = modulesToCopy ++ engineModules,
     graalVersion        = graalMavenPackagesVersion,
     javaVersion         = graalVersion,
     ensoVersion         = ensoVersion,
@@ -2431,6 +2852,12 @@ buildEngineDistributionNoIndex := {
     generateIndex       = false
   )
   log.info(s"Engine package created at $root")
+}
+
+// This makes the buildEngineDistributionNoIndex task usable as a dependency
+// of other tasks.
+ThisBuild / buildEngineDistributionNoIndex := {
+  buildEngineDistributionNoIndex.result.value
 }
 
 lazy val runEngineDistribution =
@@ -2477,11 +2904,17 @@ val allStdBits: Parser[String] =
 lazy val `simple-httpbin` = project
   .in(file("tools") / "simple-httpbin")
   .settings(
-    frgaalJavaCompilerSetting,
-    Compile / javacOptions ++= Seq("-XDignore.symbol.file", "-Xlint:all"),
+    customFrgaalJavaCompilerSettings(targetJdk = "21"),
+    autoScalaLibrary := false,
+    Compile / javacOptions ++= Seq("-Xlint:all"),
+    Compile / run / mainClass := Some("org.enso.shttp.SimpleHTTPBin"),
+    assembly / mainClass := (Compile / run / mainClass).value,
     libraryDependencies ++= Seq(
-      "org.apache.commons" % "commons-text" % commonsTextVersion
-    )
+      "org.apache.commons"        % "commons-text" % commonsTextVersion,
+      "org.apache.httpcomponents" % "httpclient"   % httpComponentsVersion
+    ),
+    (Compile / run / fork) := true,
+    (Compile / run / connectInput) := true
   )
   .configs(Test)
 
@@ -2520,12 +2953,14 @@ pkgStdLibInternal := Def.inputTask {
     case "TestHelpers" =>
       (`enso-test-java-helpers` / Compile / packageBin).value
       (`exploratory-benchmark-java-helpers` / Compile / packageBin).value
+      (`benchmark-java-helpers` / Compile / packageBin).value
     case "AWS" =>
       (`std-aws` / Compile / packageBin).value
     case _ if buildAllCmd =>
       (`std-base` / Compile / packageBin).value
       (`enso-test-java-helpers` / Compile / packageBin).value
       (`exploratory-benchmark-java-helpers` / Compile / packageBin).value
+      (`benchmark-java-helpers` / Compile / packageBin).value
       (`std-table` / Compile / packageBin).value
       (`std-database` / Compile / packageBin).value
       (`std-image` / Compile / packageBin).value
@@ -2590,9 +3025,11 @@ buildProjectManagerDistribution := {
 lazy val buildGraalDistribution =
   taskKey[Unit]("Builds the GraalVM distribution")
 buildGraalDistribution := {
-  val log    = streams.value.log
-  val distOs = "DIST_OS"
-  val osName = "os.name"
+  val log      = streams.value.log
+  val distOs   = "DIST_OS"
+  val distArch = "DIST_ARCH"
+  val osName   = "os.name"
+  val archName = "os.arch"
   val distName = sys.env.get(distOs).getOrElse {
     val name = sys.props(osName).takeWhile(!_.isWhitespace)
     if (sys.env.contains("CI")) {
@@ -2602,13 +3039,14 @@ buildGraalDistribution := {
     }
     name
   }
-  val os = DistributionPackage.OS(distName).getOrElse {
+  val arch = sys.env.get(distArch).orElse(sys.env.get(archName))
+  val os = DistributionPackage.OS(distName, arch).getOrElse {
     throw new RuntimeException(s"Failed to determine OS: $distName.")
   }
   packageBuilder.createGraalPackage(
     log,
     os,
-    DistributionPackage.Architecture.X64
+    os.archs.head
   )
 }
 
@@ -2623,11 +3061,32 @@ updateLibraryManifests := {
   val libraries = Editions.standardLibraries.map(libName =>
     BundledLibrary(libName, stdLibVersion)
   )
-
+  val runnerCp  = (LocalProject("engine-runner") / Runtime / fullClasspath).value
+  val runtimeCp = (LocalProject("runtime") / Runtime / fullClasspath).value
+  val fullCp    = (runnerCp ++ runtimeCp).distinct
+  val modulesOnModulePath =
+    JPMSUtils
+      .filterModulesFromClasspath(
+        fullCp,
+        JPMSUtils.componentModules,
+        log,
+        shouldContainAll = true
+      )
+      .map(_.data)
+  val modulePath = modulesOnModulePath ++ Seq(file("runtime.jar"))
+  val runnerJar  = (LocalProject("engine-runner") / assembly).value
+  val javaOpts = Seq(
+    "-Denso.runner=" + runnerJar.getAbsolutePath,
+    "--module-path",
+    modulePath.map(_.getAbsolutePath).mkString(File.pathSeparator),
+    "-m",
+    "org.enso.runtime/org.enso.EngineRunnerBootLoader"
+  )
   LibraryManifestGenerator.generateManifests(
     libraries,
     file("distribution"),
     log,
+    javaOpts,
     cacheFactory
   )
 }
